# opengl_practice

./: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/: fragment.glsl  vertex.glsl
src/: Application.cpp  Application.hpp  Rectangle.cpp  Rectangle.hpp  Shader.cpp  Shader.hpp  Triangle.cpp  Triangle.hpp  main.cpp
